Bug 1601837 - Using current available slot to access controllerState instead of hand index in OpenVR. r=kip

We notice we didn't write states info ControllerState correctly before because sometimes there is only one controller (right hand), it will try to access the slot 1 instead of the current available slot 0. That makes us can't see this controller is available.

Differential Revision: https://phabricator.services.mozilla.com/D56243

--HG--
extra : moz-landing-system : lando